--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
                 </div>
             </button>
         </div>
+        <div class="header__hamburger-container">
+            <div class="header__hamburger">
+                <button class="header__hamburger-button">
+                    <span class="header__hamburger-line"></span>
+                    <span class="header__hamburger-line"></span>
+                    <span class="header__hamburger-line"></span>
+                </button>
+            </div>
+            <nav class="header__nav">
+                <ul class="header__nav-list">
+                    <li class="header__nav-item"><a href="#service" class="header__nav-link">サービス</a></li>
+                    <li class="header__nav-item"><a href="#achievement" class="header__nav-link">実績</a></li>
+                    <li class="header__nav-item"><a href="#flow" class="header__nav-link">ご契約後の流れ</a></li>
+                    <li class="header__nav-item"><a href="#faq" class="header__nav-link">よくある質問</a></li>
+                    </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section class="fv">
@@ -38,21 +55,22 @@
                 </div>
                 <div class="fv__content">
                     <div class="fv__content-item">
-                        <p><span class="fv__content-item-orange">企画・運用・分析</span><br>まで一貫して<br>プロに丸投げ！</p>
+                        <p class="fv__content-item-text"><span class="fv__content-item-orange">企画・運用・分析</span><br class="u-pc u-tb">まで一貫して<br class="u-pc u-tb">プロに丸投げ！</p>
                     </div>
                     <div class="fv__content-item">
-                        <p><span class="fv__content-item-orange">幅広い分野</span><br>のWeb集客に対応！</p>
+                        <p class="fv__content-item-text"><span class="fv__content-item-orange">幅広い分野</span><br class="u-pc u-tb">のWeb集客に対応！</p>
                     </div>
                     <div class="fv__content-item">
-                        <p>AIの導入により<span class="fv__content-item-orange">集客コストの削減</span><br>が実現！</p>
+                        <p class="fv__content-item-text"><span class="fv__content-item-orange">AIの導入により</span><br class="u-pc u-tb">集客コストの削減が実現！</p>
                     </div>
                 </div>
             </div>
-            <div class="fv__image-container">
+            <!-- <div class="fv__image-container">
                 <img src="images/fv.png" alt="AI集客イメージ" class="fv__image">
-            </div>
+            </div> -->
         </section>
         <section class="problem">
+            <div class="problem__inner inner">
             <img src="images/problem_icon.png" alt="お悩みアイコン" class="problem__image">
             <div class="problem__text">
                 <h2 class="section__title problem__title">こんな<span class="problem__title-big">お悩み</span>ありませんか？</h2>
@@ -69,51 +87,50 @@
                 <div class="solution__arrow-item"></div>
                 <div class="solution__arrow-item"></div>
             </div>
-            <div class="solution__container">
-                <div class="solution__inner inner">               
-                    <h2 class="section__title solution__title"><span class="solution__title-point">その悩み、</span><br><span class="solution__title-big">アリカ</span>が解決します！</h2>
-                    <div class="solution__container-items">
-                        <div class="solution__container-item">
-                            <div class="solution__container-item-title">
-                                <h3>Web集客のプロに企画・運用・分析を一貫して任せられる！</h3>
-                            </div>
-                            <div class="solution__container-item-content">
-                                <img src="images/solution01.png" alt="Web集客プロフェッショナル" class="solution__container-item-image">
-                                <p class="solution__container-item-text">
-                                    大学発AIマーケターと関西トップクラスの実績を持つSNSマーケターが企画から運用、分析までを一貫して対応します。<br>
-                                    貴社が持つWeb集客のお悩みをお聞かせください。
-                                </p>
-                            </div>
+            <div class="solution__inner inner">               
+                <h2 class="section__title solution__title"><span class="solution__title-point">その悩み、</span><br><span class="solution__title-big">アリカ</span>が解決します！</h2>
+                <div class="solution__container-items">
+                    <div class="solution__container-item">
+                        <div class="solution__container-item-title">
+                            <h3>Web集客のプロに企画・運用・分析を一貫して任せられる！</h3>
                         </div>
-                        <div class="solution__container-item">
-                            <div class="solution__container-item-title">
-                                <h3>AIの導入により、サービスの向上やコストの削減が実現！</h3>
-                            </div>
-                            <div class="solution__container-item-content">
-                                <img src="images/solution02.png" alt="AI導入によるコスト削減" class="solution__container-item-image">
-                                <p class="solution__container-item-text">
-                                        お客様の目的に合わせて専任のAIマーケターがオリジナルのプロンプトを開発します。<br>
-                                        それによって運用における人的作業を減らすことができ、コストを抑えてより多くのユーザーにリーチできます。
-                                </p>
-                            </div>
+                        <div class="solution__container-item-content">
+                            <img src="images/solution01.png" alt="Web集客プロフェッショナル" class="solution__container-item-image">
+                            <p class="solution__container-item-text">
+                                大学発AIマーケターと関西トップクラスの実績を持つSNSマーケターが企画から運用、分析までを一貫して対応します。<br>
+                                貴社が持つWeb集客のお悩みをお聞かせください。
+                            </p>
                         </div>
-                        <div class="solution__container-item">
-                            <div class="solution__container-item-title">
-                                <h3>さまざまな方面から貴社のWeb集客をアシストします</h3>
-                            </div>
-                            <div class="solution__container-item-content">
-                                <img src="images/solution03.png" alt="Web集客サポート" class="solution__container-item-image">
-                                <p class="solution__container-item-text">「Webサイト/LP制作、SNSマーケティング、AIマーケティング、システム・アプリ開発」の事業を手掛ける当社だからこそできるご提案で貴社のWeb集客に貢献します。</p>
-                            </div>
+                    </div>
+                    <div class="solution__container-item">
+                        <div class="solution__container-item-title">
+                            <h3>AIの導入により、サービスの向上やコストの削減が実現！</h3>
+                        </div>
+                        <div class="solution__container-item-content">
+                            <img src="images/solution02.png" alt="AI導入によるコスト削減" class="solution__container-item-image">
+                            <p class="solution__container-item-text">
+                                    お客様の目的に合わせて専任のAIマーケターがオリジナルのプロンプトを開発します。<br>
+                                    それによって運用における人的作業を減らすことができ、コストを抑えてより多くのユーザーにリーチできます。
+                            </p>
+                        </div>
+                    </div>
+                    <div class="solution__container-item">
+                        <div class="solution__container-item-title">
+                            <h3>さまざまな方面から貴社のWeb集客をアシストします</h3>
+                        </div>
+                        <div class="solution__container-item-content">
+                            <img src="images/solution03.png" alt="Web集客サポート" class="solution__container-item-image">
+                            <p class="solution__container-item-text">「Webサイト/LP制作、SNSマーケティング、AIマーケティング、システム・アプリ開発」の事業を手掛ける当社だからこそできるご提案で貴社のWeb集客に貢献します。</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="cv">
-            <img src="images/cv.png" alt="無料相談はこちら" class="cv__image">
-            <h2 class="section__title cv__title">無料相談はこちら</h2>
-            <div class="cv__container">
+            <div class="cv__inner inner">
+                <img src="images/cv.png" alt="無料相談はこちら" class="cv__image">
+                <h2 class="section__title cv__title">無料相談は<br class="u-tb">こちら</h2>
+                <div class="cv__container">
                 <p class="cv__text">＼まずはお気軽にご連絡ください／</p>
                 <div class="cv__buttons">
                     <button class="cv__button button button-free cv__button-free">
@@ -214,7 +231,6 @@
                     <li class="achievement__list-item" data-tab="website">Webサイト運用</li>
                     <li class="achievement__list-item" data-tab="app">アプリ開発</li>
                 </ul>
-
                 <div class="achievement__container" data-tab-target="sns">
                     <div class="achievement__container-customer">
                         <h3 class="achievement__container-customer-name">PONPONCOCKTAIL KOBE様</h3>
@@ -256,9 +272,10 @@
             </div>
         </section>
         <section class="cv">
-            <img src="images/cv.png" alt="無料相談はこちら" class="cv__image">
-            <h2 class="section__title cv__title">無料相談はこちら</h2>
-            <div class="cv__container">
+            <div class="cv__inner inner">
+                <img src="images/cv.png" alt="無料相談はこちら" class="cv__image">
+                <h2 class="section__title cv__title">無料相談は<br class="u-tb">こちら</h2>
+                <div class="cv__container">
                 <p class="cv__text">＼まずはお気軽にご連絡ください／</p>
                 <div class="cv__buttons">
                     <button class="cv__button button button-free cv__button-free">
@@ -281,11 +298,11 @@
         </section>
         <section class="flow">
             <div class="flow__inner inner">
-                <h2 class="section__title flow__title">ご契約の流れ</h2>
+                <h2 class="section__title flow__title">ご契約後の流れ</h2>
                 <div class="flow__container">
                     <div class="flow__item">
-                            <div class="flow__item-step">
-                                <p class="flow__item-step-number">STEP1</p>
+                        <div class="flow__item-step">
+                            <p class="flow__item-step-number">STEP1</p>
                             <div class="flow__item-step-icon">
                                 <div class="flow__item-step-icon-self">
                                     <i class="fa-solid fa-check"></i>
@@ -390,7 +407,7 @@
                     <div class="faq__container-item">
                         <div class="faq__container-item-question">
                             <span class="faq__container-item-question-tag faq__container-item-tag">Q</span>
-                            <h3 class="faq__container-item-question-title">質問1</h3>
+                            <h3 class="faq__container-item-question-text">質問1</h3>
                             <div class="faq__container-item-question-button">
                                 <i class="fa-solid fa-plus"></i>
                             </div>
@@ -403,7 +420,7 @@
                     <div class="faq__container-item">
                         <div class="faq__container-item-question">
                             <span class="faq__container-item-question-tag faq__container-item-tag">Q</span>
-                            <h3 class="faq__container-item-question-title">質問1</h3>
+                            <h3 class="faq__container-item-question-text">質問1</h3>
                             <div class="faq__container-item-question-button">
                                 <i class="fa-solid fa-plus"></i>
                             </div>
@@ -416,7 +433,7 @@
                     <div class="faq__container-item">
                         <div class="faq__container-item-question">
                             <span class="faq__container-item-question-tag faq__container-item-tag">Q</span>
-                            <h3 class="faq__container-item-question-title">質問1</h3>
+                            <h3 class="faq__container-item-question-text">質問1</h3>
                             <div class="faq__container-item-question-button">
                                 <i class="fa-solid fa-plus"></i>
                             </div>
