--- a/index.html
+++ b/index.html
@@ -48,19 +48,21 @@
     </header>
     <main>
         <section class="fv">
+            <img src="images/border.png" alt="ボーダー" class="fv__border">
             <div class="fv__container">
                 <div class="fv__text">
                     <p class="fv__subtitle">大学発AIマーケティング×関西トップクラスの<br>SNSマーケター監修</p>
-                    <h1 class="fv__title"><span class="fv__title-quote">“</span><span class="fv__title-big">AI集客</span><span class="fv__title-quote">”</span><br>丸投げください</h1>
+                    <img src="images/decoration.png" alt="デコレーション" class="fv__decoration">
+                    <h1 class="fv__title"><span class="fv__title-quote">"</span><span class="fv__title-big">AI集客</span><span class="fv__title-quote">"</span><br>丸投げください</h1>
                 </div>
                 <div class="fv__content">
-                    <div class="fv__content-item">
+                    <div class="fv__content-item fv__content-item-1">
                         <p class="fv__content-item-text"><span class="fv__content-item-orange">企画・運用・分析</span><br class="u-pc u-tb">まで一貫して<br class="u-pc u-tb">プロに丸投げ！</p>
                     </div>
-                    <div class="fv__content-item">
+                    <div class="fv__content-item fv__content-item-2">
                         <p class="fv__content-item-text"><span class="fv__content-item-orange">幅広い分野</span><br class="u-pc u-tb">のWeb集客に対応！</p>
                     </div>
-                    <div class="fv__content-item">
+                    <div class="fv__content-item fv__content-item-3">
                         <p class="fv__content-item-text"><span class="fv__content-item-orange">AIの導入により</span><br class="u-pc u-tb">集客コストの削減が実現！</p>
                     </div>
                 </div>
@@ -82,6 +84,7 @@
             </div>
         </section>
         <section class="solution">
+            <img src="images/border.png" alt="ボーダー" class="solution__border">
             <div class="solution__arrow">
                 <div class="solution__arrow-item"></div>
                 <div class="solution__arrow-item"></div>
@@ -131,27 +134,29 @@
                 <img src="images/cv.png" alt="無料相談はこちら" class="cv__image">
                 <h2 class="section__title cv__title">無料相談は<br class="u-tb">こちら</h2>
                 <div class="cv__container">
-                <p class="cv__text">＼まずはお気軽にご連絡ください／</p>
-                <div class="cv__buttons">
-                    <button class="cv__button button button-free cv__button-free">
-                        <div class="button__container cv__button-container cv__button-free-container">
-                            <div class="button-free-circle cv__button-free-circle">
-                                <span class="cv__button-free-circle-big">1</span>分で<br>入力完了
+                    <p class="cv__text">＼まずはお気軽にご連絡ください／</p>
+                    <div class="cv__buttons">
+                        <button class="cv__button button button-free cv__button-free">
+                            <div class="button__container cv__button-container cv__button-free-container">
+                                <div class="button-free-circle cv__button-free-circle">
+                                    <span class="cv__button-free-circle-big">1</span>分で<br>入力完了
+                                </div>
+                                <p class="cv__button-free-text button-free-text"><span class="button-free-red cv__button-free-red">無料</span>で今すぐ相談する</p>
+                                <span class="button-arrow button-arrow-free cv__button-arrow">▶</span>
                             </div>
-                            <p class="cv__button-free-text button-free-text"><span class="button-free-red cv__button-free-red">無料</span>で今すぐ相談する</p>
-                            <span class="button-arrow button-arrow-free cv__button-arrow">▶</span>
-                        </div>
-                    </button>
-                    <button class="cv__button button button-line cv__button-line">
-                        <div class="button__container cv__button-container cv__button-line-container">
-                            <p class="cv__button-line-text button-line-text">LINE相談はこちら</p>
-                            <span class="button-arrow button-arrow-line cv__button-arrow">▶</span>
-                        </div>
-                    </button>
+                        </button>
+                        <button class="cv__button button button-line cv__button-line">
+                            <div class="button__container cv__button-container cv__button-line-container">
+                                <p class="cv__button-line-text button-line-text">LINE相談はこちら</p>
+                                <span class="button-arrow button-arrow-line cv__button-arrow">▶</span>
+                            </div>
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
         <section class="feature">
+            <img src="images/border.png" alt="ボーダー" class="feature__border">
             <div class="feature__inner inner">
                 <div class="feature__container">
                     <h2 class="section__title feature__title">アリカの特徴</h2>
@@ -235,38 +240,54 @@
                     <div class="achievement__container-customer">
                         <h3 class="achievement__container-customer-name">PONPONCOCKTAIL KOBE様</h3>
                     </div>
+                    <div class="achievement__container-tabs">
+                        <button class="achievement__container-tab active" data-tab="content">実績</button>
+                        <button class="achievement__container-tab" data-tab="image">イメージ</button>
+                    </div>
                     <div class="achievement__container-item">
-                        <div class="achievement__container-item-content">
+                        <div class="achievement__container-item-content active" data-tab-content="content">
                             <ul class="achievement__container-item-list">
                                 <li class="achievement__container-item-list-item">半年で約2,000人フォロワー増</li>
                                 <li class="achievement__container-item-list-item">月間売上3倍</li>
                                 <li class="achievement__container-item-list-item">フォロワー数10,000人突破</li>
                             </ul>
                             <div class="achievement__container-item-price">
-                                <i class="fa-solid fa-yen-sign achievement__container-item-price-icon"></i>
+                                <div class="achievement__container-item-price-container">
+                                    <i class="fa-solid fa-yen-sign achievement__container-item-price-icon"></i>
+                                </div>
                                 <p class="achievement__container-item-price-text">月10投稿<br>220,000円(税抜)</p> 
                             </div>
                         </div>
-                        <img src="images/achievement01.png" alt="PONPONCOCKTAIL KOBE様" class="achievement__container-item-image">
+                        <div class="achievement__container-item-image-container" data-tab-content="image">
+                            <img src="images/achievement01.png" alt="PONPONCOCKTAIL KOBE様" class="achievement__container-item-image">
+                        </div>
                     </div>
                 </div>
                 <div class="achievement__container hidden" data-tab-target="ai-seo">
                     <div class="achievement__container-customer">
                         <h3 class="achievement__container-customer-name">お客様B様 (AI×SEO運用)</h3>
                     </div>
+                    <div class="achievement__container-tabs">
+                        <button class="achievement__container-tab active" data-tab="content">実績</button>
+                        <button class="achievement__container-tab" data-tab="image">イメージ</button>
+                    </div>
                     <div class="achievement__container-item">
-                        <div class="achievement__container-item-content">
+                        <div class="achievement__container-item-content active" data-tab-content="content">
                             <ul class="achievement__container-item-list">
                                 <li class="achievement__container-item-list-item">AI×SEO 実績項目1</li>
                                 <li class="achievement__container-item-list-item">AI×SEO 実績項目2</li>
                                 <li class="achievement__container-item-list-item">AI×SEO 実績項目3</li>
                             </ul>
                             <div class="achievement__container-item-price">
-                                <i class="fa-solid fa-yen-sign achievement__container-item-price-icon"></i>
+                                <div class="achievement__container-item-price-container">
+                                    <i class="fa-solid fa-yen-sign achievement__container-item-price-icon"></i>
+                                </div>
                                 <p class="achievement__container-item-price-text">AI×SEO 価格<br>YYY,YYY円(税抜)</p> 
                             </div>
                         </div>
-                        <img src="images/achievement01.png" alt="お客様B様 (AI×SEO運用)" class="achievement__container-item-image">
+                        <div class="achievement__container-item-image-container" data-tab-content="image">
+                            <img src="images/achievement01.png" alt="お客様B様 (AI×SEO運用)" class="achievement__container-item-image">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -297,6 +318,7 @@
             </div>
         </section>
         <section class="flow">
+            <img src="images/border.png" alt="ボーダー" class="flow__border">
             <div class="flow__inner inner">
                 <h2 class="section__title flow__title">ご契約後の流れ</h2>
                 <div class="flow__container">
@@ -305,7 +327,7 @@
                             <p class="flow__item-step-number">STEP1</p>
                             <div class="flow__item-step-icon">
                                 <div class="flow__item-step-icon-self">
-                                    <i class="fa-solid fa-check"></i>
+                                    <img src="images/flow_icon01.png" alt="STEP1" class="flow__item-step-icon-self-image">
                                 </div>
                             </div>
                         </div>
@@ -321,7 +343,7 @@
                             <p class="flow__item-step-number">STEP2</p>
                             <div class="flow__item-step-icon">
                                 <div class="flow__item-step-icon-self">
-                                    <i class="fa-solid fa-check"></i>
+                                    <img src="images/flow_icon02.png" alt="STEP2" class="flow__item-step-icon-self-image">
                                 </div>
                             </div>
                         </div>
@@ -337,7 +359,7 @@
                             <p class="flow__item-step-number">STEP3</p>
                             <div class="flow__item-step-icon">
                                 <div class="flow__item-step-icon-self">
-                                    <i class="fa-solid fa-check"></i>
+                                    <img src="images/flow_icon03.png" alt="STEP3" class="flow__item-step-icon-self-image">
                                 </div>
                             </div>
                         </div>
@@ -353,7 +375,7 @@
                             <p class="flow__item-step-number">STEP4</p>
                             <div class="flow__item-step-icon">
                                 <div class="flow__item-step-icon-self">
-                                    <i class="fa-solid fa-check"></i>
+                                    <img src="images/flow_icon04.png" alt="STEP4" class="flow__item-step-icon-self-image">
                                 </div>
                             </div>
                         </div>
@@ -369,7 +391,7 @@
                             <p class="flow__item-step-number">STEP5</p>
                             <div class="flow__item-step-icon">
                                 <div class="flow__item-step-icon-self">
-                                    <i class="fa-solid fa-check"></i>
+                                    <img src="images/flow_icon05.png" alt="STEP5" class="flow__item-step-icon-self-image">
                                 </div>
                             </div>
                         </div>
@@ -385,7 +407,7 @@
                             <p class="flow__item-step-number">STEP6</p>
                             <div class="flow__item-step-icon">
                                 <div class="flow__item-step-icon-self">
-                                    <i class="fa-solid fa-check"></i>
+                                    <img src="images/flow_icon06.png" alt="STEP6" class="flow__item-step-icon-self-image">
                                 </div>
                             </div>
                         </div>
@@ -408,8 +430,23 @@
                         <div class="faq__container-item-question">
                             <span class="faq__container-item-question-tag faq__container-item-tag">Q</span>
                             <h3 class="faq__container-item-question-text">質問1</h3>
+                            <div class="faq__container-item-question-button active">
+                                <span class="faq__container-item-question-button-line"></span>
+                                <span class="faq__container-item-question-button-line"></span>
+                            </div>
+                        </div>
+                        <div class="faq__container-item-answer active">
+                            <span class="faq__container-item-answer-tag faq__container-item-tag">A</span>
+                            <p class="faq__container-item-answer-text">回答1</p>
+                        </div>
+                    </div>
+                    <div class="faq__container-item">
+                        <div class="faq__container-item-question">
+                            <span class="faq__container-item-question-tag faq__container-item-tag">Q</span>
+                            <h3 class="faq__container-item-question-text">質問1</h3>
                             <div class="faq__container-item-question-button">
-                                <i class="fa-solid fa-plus"></i>
+                                <span class="faq__container-item-question-button-line"></span>
+                                <span class="faq__container-item-question-button-line"></span>
                             </div>
                         </div>
                         <div class="faq__container-item-answer">
@@ -422,20 +459,8 @@
                             <span class="faq__container-item-question-tag faq__container-item-tag">Q</span>
                             <h3 class="faq__container-item-question-text">質問1</h3>
                             <div class="faq__container-item-question-button">
-                                <i class="fa-solid fa-plus"></i>
-                            </div>
-                        </div>
-                        <div class="faq__container-item-answer">
-                            <span class="faq__container-item-answer-tag faq__container-item-tag">A</span>
-                            <p class="faq__container-item-answer-text">回答1</p>
-                        </div>
-                    </div>
-                    <div class="faq__container-item">
-                        <div class="faq__container-item-question">
-                            <span class="faq__container-item-question-tag faq__container-item-tag">Q</span>
-                            <h3 class="faq__container-item-question-text">質問1</h3>
-                            <div class="faq__container-item-question-button">
-                                <i class="fa-solid fa-plus"></i>
+                                <span class="faq__container-item-question-button-line"></span>
+                                <span class="faq__container-item-question-button-line"></span>
                             </div>
                         </div>
                         <div class="faq__container-item-answer">
